# mipt_fabric

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  Корпус_консоли.stl
lib/: Arduino.h  CMakeLists.txt
lib/app/: app.hpp
lib/doom-nano/: constants.h  display.h  doom.cpp  doom.hpp  doom_impl.hpp  level.h  sprites.h
lib/graphics/button/: button.cpp  button.hpp  sprite.hpp
lib/graphics/logo/: doom.hpp  menu.hpp  pong.hpp  tetris.hpp
lib/menu/: menu.cpp  menu.hpp
lib/pong/: pong.cpp  pong.hpp  pong_details.hpp
lib/sdl_like/: sdl_types.hpp
lib/sdl_like/kbd/: sdl_button.hpp  sdl_buttonpad.hpp  sdl_isrbutton.hpp  sdl_key.hpp  sdl_keyboard.hpp
lib/sdl_like/sdl/: sdl_like.cpp  sdl_like.hpp  sim_display.cpp  sim_display.hpp
lib/tetris/: config.hpp  tetris.cpp  tetris.hpp  tetris_impl.cpp  tetris_impl.hpp
src/: main.cpp
